fix bug with dropdown menu behind content

--- a/src/components/Home/Header.scss
+++ b/src/components/Home/Header.scss
@@ -8,7 +8,7 @@ header {
   .top-bar {
     height: 120px;
     background-color: #ffcd00;
-    z-index: 9999;
+    z-index: 10;
     .promo-button {
       height: 35px;
       color: #273c48;
